try forcing zstd static

--- a/Src/libCZI/CMakeLists.txt
+++ b/Src/libCZI/CMakeLists.txt
@@ -215,11 +215,12 @@ FetchContent_Declare(
   GIT_TAG "v1.5.2"
 )
 
+set(ZSTD_BUILD_PROGRAMS  OFF CACHE BOOL "" FORCE)
+set(ZSTD_BUILD_SHARED    OFF CACHE BOOL "" FORCE)
+set(ZSTD_BUILD_STATIC    ON CACHE BOOL "" FORCE)
 FetchContent_GetProperties(zstd)
 if(NOT zstd_POPULATED)
   message(STATUS "Fetching zstd...")
-  set(ZSTD_BUILD_PROGRAMS  OFF CACHE BOOL "" FORCE)
-  set(ZSTD_BUILD_SHARED    OFF CACHE BOOL "" FORCE)
 
   FetchContent_Populate(zstd)
 
